--- a/Test/ResultCheck.html
+++ b/Test/ResultCheck.html
@@ -1,7 +1,7 @@
 <html>
     <body>
-        <table cellspacing="0" style="border-collapse: collapse;">
-            <tbody>
+        <table id="titanTable" cellspacing="0" style="border-collapse: collapse;">
+            <tbody id="titanTableBody">
               <tr>
                 <td class="c01 head">レベル</td>
                 <td class="c02 head">必要な石炭</td>
