change Json Property Name

--- a/Titan.html
+++ b/Titan.html
@@ -135,10 +135,10 @@
             colelement.appendChild(createTd(obj.Data[i].resource,2));
             colelement.appendChild(createTd(obj.Data[i].power,3));
             colelement.appendChild(createTd(obj.Data[i].output,4));
-            colelement.appendChild(createTd(obj.Data[i].#1,5));
-            colelement.appendChild(createTd(obj.Data[i].#2,6));
-            colelement.appendChild(createTd(obj.Data[i].#3,7));
-            colelement.appendChild(createTd(obj.Data[i].#4,8));
+            colelement.appendChild(createTd(obj.Data[i].no1,5));
+            colelement.appendChild(createTd(obj.Data[i].no2,6));
+            colelement.appendChild(createTd(obj.Data[i].no3,7));
+            colelement.appendChild(createTd(obj.Data[i].no4,8));
             colelement.appendChild(createTd(obj.Data[i].week,9));
             parentElement.appendChild(baseElement);
           }
