--- a/Event.html
+++ b/Event.html
@@ -12,6 +12,9 @@
       <b>イベント カレンダー</b>
     </div>
     <div id="main">
+      <div class="PagingAreaTop">
+        <!--ここに矢印+説明で前の週・次の週を表示する。-->
+      </div>
       <div class="Items" id="d20250602">
         <div class="ItemOuter flex">
           <span class="flex FirstBlock">
@@ -20,12 +23,36 @@
           </span>
           <span class="flex SecondBlock">
             <div class="flex Conductor">
-              <div class="flex">車掌：</div>
-              <div class="felx">発車時刻：</div>
+              <div class="flex Title1">車掌</div>
+              <div class="flex ConName">セベリティ</div>
+              <div class="felx StartTime">発車時刻</div>
+              <div class="flex Start">JST - 11:00  WIB - 9:00</div>
             </div>
           </span>
-          <span class="inline">
-
+          <span class="flex ThirdBlock">
+            <div class="LongMark" style="visibility: hidden;">
+              <div class="LongMarkTitle">
+                <div>軍事演習</div>
+              </div>
+              <div class="LongMarkTime">
+                <div>JST - 21:00</div>
+                <div>WIB - 19:00</div>
+              </div>
+            </div>
+            <div class="LongMark">
+              <div class="LongMarkTitle">
+                <div>ゾンビ侵攻</div>
+              </div>
+              <div class="LongMarkTime">
+                <div>JST - 21:35</div>
+                <div>WIB - 19:35</div>
+              </div>
+            </div>
+          </span>
+          <span class="flex">
+            <!--86x25
+              ・ゾンビ襲来・幽霊作戦・砂漠の戦場・雪嵐の戦場
+            　・終末の足音・暴走ボス・戦域対決・議事堂戦・隕鉄争奪線・覇天遠征-->
           </span>
         </div>
         
